@@ -859,9 +859,9 @@ void define_agenda_data()
         "\n"
         "This is the first agenda in a set of agendas. Each of these agendas\n"
         "shall treat the radiative properties of a surface type. The task\n"
-        "of these agendas match directly *surface_rtprop_agenda*. That is, it\n"
-        "should be possible to copy the content of these agendas to\n"
-        "*surface_rtrpop_agenda*. This with one exception, these agendas\n"
+        "of these agendas is equivalent to that of *surface_rtprop_agenda*.\n"
+        "That is, it should be possible to copy the content of these agendas\n"
+        "to *surface_rtprop_agenda*. This with one exception, these agendas\n"
         "have one additional input: *surface_type_aux*.\n"
         "\n"
         "See *surface_type_mask* for comments on the surface type coding\n"
