@@ -5603,12 +5603,12 @@ void Workspace::define_wsv_data()
        "coding. A common term for such a variable is \"surface mask\".\n"
        "\n"
        "The mask is a latitude and longtide field. The mask values are\n"
-       "floating numbers, where the integer part is the type and the reminder\n"
+       "floating numbers, where the integer part is the type and the remainder\n"
        "can be used to provide auxilary information. In terms of the local\n"
-       "variables, the mask values equal *sensor_type* + *sensor_type_aux*.\n"
+       "variables, the mask values equal *surface_type* + *surface_type_aux*.\n"
        "\n"
        "There is no fixed type coding, it is up to the user to set up\n"
-       "a consistent system. The critical point is to the agendas\n"
+       "a consistent system. The critical point is in the agendas\n"
        "matching each surface type, that are denoted as iy_surface_sub_agendaX\n"
        "where X is the *surface_type* index.\n"
        "\n"
